--- a/kadai/kurieita.html
+++ b/kadai/kurieita.html
@@ -9,6 +9,7 @@
 <body>
  <div class="header">
 <nav>
+	<!-- olタグの中にはリストになるliタグを使用しましょう。olタグの閉じタグも記述します。大嶺-->
  <ol>
                <img class="logo" src="images/logo.png">
                 <a class="pan" href="kadai.html">トップ</a>
